# packages/api-sdk/openapi.json
@@ -714,7 +714,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/RecipeBody"
+                "$ref": "#/components/schemas/UpdateRecipeBody"
               }
             }
           }
@@ -1096,6 +1096,33 @@
           "description",
           "steps"
         ]
+      },
+      "UpdateRecipeBody": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "ownerId": {
+            "type": "string",
+            "nullable": true
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "steps": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
       },
       "LoginBody": {
         "type": "object",
